2007-09-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder +initialize]):
	moved the requirement of authentication from the SOGo application
	class to here.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -saveContentString:_iCalbaseSequence:_v]):
	check whether the new appointment object is still relevant before
	sending a notification.

2007-09-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoWebAuthenticator.m ([SOGoWebAuthenticator
	-setupAuthFailResponse:responsewithReason:reasoninContext:context]):
	render the login page through the SoDefaultRenderer.

	* UI/MainUI/SOGoRootPage.m ([SOGoRootPage
	-isPublicInContext:localContext]): new overriden method that
	returns YES.

	* UI/Scheduler/UIxCalendarSelector.m ([UIxCalendarSelector
	-currentCalendarLogin]): replace css-unsafe characters with _.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent
	-shortUserNameForDisplay]): simplified method.
	([-user]): removed method since [context activeUser] is as useful.

2007-09-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage -logoffAction]):
	set the cookie path to "/".

	* Main/SOGo.m ([SOGo -authenticatorInContext:_ctx]): choose the
	authenticator based on the request handler key. "dav" returns the
	SOGoDAVAuthenticator, anything else returns the Web authenticator.

	* SoObjects/SOGo/SOGoDAVAuthenticator.m: renamed module from
	"SOGoAuthenticator".

	* SoObjects/SOGo/SOGoWebAuthenticator.m: new class module
	implementing a subclass of SoCookieAuthenticator, designed for
	web-based cookie authentication of users.m

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage -logoffAction]):
	new method that resets the authentification cookie.

2007-08-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m ([LDAPSource
	-checkLogin:loginToCheckandPassword:passwordToCheck]): initialize